src/objects/EDIOutbound__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This object will have all the times when the EDI Outbound Job runs</description>
    <fields>
        <fullName>Minute1__c</fullName>
        <label>Minute1</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minute__c</fullName>
        <description>This field is added to enter the minute of the hour for EDIOutbound Batch</description>
        <label>Minute</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>This field is created to store the state values</description>
        <label>State</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>This field is created to store the time at which job needs to run based on state</description>
        <label>Time</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>EDIOutbound</label>
</CustomObject>